@@ -14,15 +14,23 @@ repositories {
 }
 
 dependencies {
-    implementation("com.github.tth05:jindex:0.0.3")
+    implementation("com.github.tth05:jindex:0.0.35")
     implementation("com.github.tth05:SCNet:18bc6c5")
 
-    implementation('com.formdev:flatlaf:2.0.1')
-    implementation('com.formdev:flatlaf-intellij-themes:2.0.1')
-    implementation('com.formdev:flatlaf-extras:2.0.1')
+    implementation('com.formdev:flatlaf:2.1')
+    implementation('com.formdev:flatlaf-intellij-themes:2.1')
+    implementation('com.formdev:flatlaf-extras:2.1')
+    implementation('com.fifesoft:rsyntaxtextarea:3.2.0')
+    implementation('com.fifesoft:autocomplete:3.2.0')
+
     implementation('com.github.javaparser:javaparser-core:3.24.0')
-    implementation("org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0")
     implementation("org.apache.commons:commons-compress:1.21")
+    implementation("com.google.code.gson:gson:2.9.0")
+    implementation("org.eclipse.jdt:org.eclipse.jdt.core:3.28.0") {
+        exclude group: "org.eclipse.platform", module: "org.eclipse.equinox.app"
+        exclude group: "org.eclipse.platform", module: "org.eclipse.core.filesystem"
+        exclude group: "org.eclipse.platform", module: "org.eclipse.core.commands"
+    }
 }
 
 shadowJar {
@@ -42,6 +50,10 @@ runtime {
             'jdk.unsupported',
             'java.datatransfer'
     ]
+}
+
+compileJava {
+    options.compilerArgs << '--enable-preview'
 }
 
 application {
